tests/paczka1/fuzzy1/36835125.err
Error in line 3: 3Pic S460 63,3
Error in line 23: 4vy4hasUIX A549 87,2
Error in line 20: BkLQMfJ5 S274 14,1
Error in line 21: lmx A549 55,9
